blog preparation, tagline copy change

--- a/_posts/work/2015-01-15-deputy-3.markdown
+++ b/_posts/work/2015-01-15-deputy-3.markdown
@@ -3,6 +3,7 @@ layout:        post
 date:          2015-01-15
 categories:    
 - work
+siteNav: work
 
 title:         "Deputy 3"
 subtitle:      "Web App Redesign"
