--- a/_posts/work/2015-01-10-myer.markdown
+++ b/_posts/work/2015-01-10-myer.markdown
@@ -7,8 +7,8 @@ categories:
 title:         "Myer"
 subtitle:      "Social Microsite"
 
-thumbnail:     myer.png
-image:         myer.jpg
+thumbnail:     work/myer.png
+image:         work/myer.jpg
 
 role:          "Web Design & Front-end Dev"
 description:   "A number of Stackla Widgets were built to support the livestream of the Myer Spring Summer 2015 Fashion Launch."
