--- a/_posts/work/2015-01-10-myer.markdown
+++ b/_posts/work/2015-01-10-myer.markdown
@@ -10,6 +10,6 @@ subtitle:      "Social Microsite"
 thumbnail:     work/myer.png
 image:         work/myer.jpg
 
-role:          "Web Design & Front-end Dev"
+role:          "Design & Front-end Development"
 description:   "A number of Stackla Widgets were built to support the livestream of the Myer Spring Summer 2015 Fashion Launch."
 ---
