replace home image with a laptop, typo fix in blog post

--- a/_posts/work/2015-01-18-deputy-3.markdown
+++ b/_posts/work/2015-01-18-deputy-3.markdown
@@ -7,7 +7,7 @@ siteNav: work
 
 title:                 "Deputy 3"
 
-thumbnail:             work/deputy/thumbnail.jpg
+thumbnail:             home/laptop.png
 image:                 work/deputy-3.png
 
 is_caseStudy:          true
