--- a/_posts/work/2015-01-18-deputy-3.markdown
+++ b/_posts/work/2015-01-18-deputy-3.markdown
@@ -55,10 +55,12 @@ The project really challenged my ability to design on a micro and macro level si
 
 One problem we ran into again and again was the lack of time. A few really interesting ideas ended up being pushed out, but might get revisited later on. One idea that got cut was an ‘inline modal’. We needed a way to place a modal over a modal over a page, so I came up with the solution of making the first modal inline, not overlaid. Below is a messy prototype, but it demonstrates the solution pretty well.
 
-<video width="768" height="384" autoplay loop poster="/assets/images/work/deputy/inline-modal.jpg">
-	<source src="/assets/images/work/deputy/inline-modal.mp4" type="video/mp4">
-</video>
-<figcaption>Inline modal inspired by Material Design's use of animation.</figcaption>
+<div class="iframe-wrapper">
+	<video width="768" height="384" autoplay loop poster="/assets/images/work/deputy/inline-modal.jpg">
+		<source src="/assets/images/work/deputy/inline-modal.mp4" type="video/mp4">
+	</video>
+	<figcaption>Inline modal inspired by Material Design's use of animation.</figcaption>
+</div>
 
 Another major issue was that we were trying to bring the desktop visually in line with the mobile apps, but many design decisions simply didn’t translate from mobile to desktop. We started by questioning some of the assumptions that had been made previously, and we ended up overhauling some key aspects of the mobile apps and meeting the designs in the middle.
 
