--- a/_posts/work/2017-12-16-medify.markdown
+++ b/_posts/work/2017-12-16-medify.markdown
@@ -1,6 +1,6 @@
 ---
 layout:                post
-date:                  2015-01-17
+date:                  2017-12-12
 categories:    
 - work
 - featured-work
@@ -27,8 +27,9 @@ Given the large amount of data available, and its very deep hierarchical structu
 
 We structured both the data visualizations and the visual design in a way that communicated this hierarchy. Data visualizations began at a “zoomed out” level, and as users dived down into areas of interest, the app would animate in and out in 3D space.
 
-{% include video.html url="/assets/images/work/medify/data-viz-4.mp4" description="We took a great deal of time and care preparing data visualisations that would be helpful and insightful, not just pretty. Repeated iterations of user testing helped us get closer to our goals. This video demonstrates some of the small UI interactions." %}
+{% include video.html url="/assets/images/work/medify/data-viz.mp4" description="We took a great deal of time and care preparing data visualisations that would be helpful and insightful, not just pretty. Repeated iterations of user testing helped us get closer to our goals. This video demonstrates some of the small UI interactions." %}
 
+{% include image.html pull="right" url="/assets/images/work/medify/ui-kit.png" description="We took a great deal of time and care preparing data visualisations that would be helpful and insightful, not just pretty. Repeated iterations of user testing helped us get closer to our goals. This video demonstrates some of the small UI interactions." %}
 
 We then began on the complex task of creating the data visualization “widgets,” each with a unique insight. We began with sketching, wireframing, and prototyping, and then I built the widget templates using HTML, CSS, and JavaScript. The templates were then handed over to the development team to hook into the database.
 
