--- a/_posts/work/2015-01-18-deputy-3.markdown
+++ b/_posts/work/2015-01-18-deputy-3.markdown
@@ -36,7 +36,7 @@ thumbnail_ratio:       50
 <section class="Page-section" id="goals">
 	<h2 class="m-bottom--lg">
 		<p>Project goals</p>
-		<p class="font-serif color-muted">Placeholder</p>
+		<p class="font-serif color-muted">What are we actually trying to do here?</p>
 	</h2>
 
 <div class="m-top--lg when-lg-m-top--0" markdown="1">
@@ -57,7 +57,7 @@ And we only had 6 months.
 <section class="Page-section" id="work">
 	<h2 class="m-bottom--lg">
 		<p>Getting to work</p>
-		<p class="font-serif color-muted">Placeholder</p>
+		<p class="font-serif color-muted">and down to business</p>
 	</h2>
 <div class="m-top--lg when-lg-m-top--0" markdown="1">
 One of the benefits of working with start-ups is that there’s always someone new joining. I like to take these new employees and test the product with them while they’re still fresh-faced.
@@ -71,7 +71,7 @@ Once we had some direction, I started work on all three aspects of the project -
 <section class="Page-section" id="challenges">
 	<h2 class="m-bottom--lg">
 		<p>Challenges</p>
-		<p class="font-serif color-muted">Placeholder</p>
+		<p class="font-serif color-muted">Potholes, hurdles and pitfalls</p>
 	</h2>
 <div class="m-top--lg when-lg-m-top--0" markdown="1">
 The project really challenged my ability to design on a micro and macro level simultaneously. One moment I would be organising the information architecture, fitting each of the features where it made the most sense, and the next I would be [researching](https://viget.com/inspire/testing-accordion-menu-designs-iconography) and testing how best to provide affordance for a particular button.
@@ -108,68 +108,13 @@ Another major issue was that we were trying to bring the desktop visually in lin
 <section class="Page-section" id="results">
 	<h2 class="m-bottom--lg">
 		<p>Results</p>
-		<p class="font-serif color-muted">Placeholder</p>
+		<p class="font-serif color-muted">Good, I think</p>
 	</h2>
 <div class="m-top--lg when-lg-m-top--0" markdown="1">
 In the end we finished coding right on the 6 month mark, and after a few weeks of QA, we launched in June. I was expecting a substantial amount of push-back, as it was a massive redesign (and I've seen how Reddit [reacted](https://www.reddit.com/r/changelog/comments/2tw6pm/reddit_change_changes_to_default_text_styling/) when the design team increased the font size by 1px), but the response to the new version has been really positive. With this new release, and a few other key strategies, Deputy has gone from 40,000 users to 270,000 in less than a year.
 
-<blockquote>“I just wanted to say how much I love the new-look Deputy web client. You guys have obviously spent a lot of time thinking about the design of the app and it shows. Well done!” <strong class="u-pullRight">–Jason Tait, a Deputy customer</strong></blockquote>
+<blockquote class="m-bottom--lg">“I just wanted to say how much I love the new-look Deputy web client. You guys have obviously spent a lot of time thinking about the design of the app and it shows. Well done!” <strong class="u-pullRight">–Jason Tait, a Deputy customer</strong></blockquote>
 
 Of course, this is just the beginning. Shipping a new version or feature will always bring really valuable feedback, and constant iteration is the key. I’m looking really forward to seeing how Deputy continues to develop.
 </div>
 </section>
-
-
-<!-- 
-## Project goals
-
-My task was to lead the third iteration of the software - Deputy 3. This iteration had a few major goals:
-
-- It needed to support all features of both Deputy 1 and 2, while at the same time simplifying the UI
-- It had to unify the design and product development of the desktop, tablet and mobile apps that had drifted apart over the years
-- It had to work on any device (previous iterations were fixed-width, desktop-only apps)
-- We needed to update from Bootstrap 2 to 3, which meant rewriting the CSS codebase from scratch
-- It had to be more fun, inviting, and intuitive.
-
-On top of all of this, we were also implementing new features. We planned to expand the functionality of the News Feed, adding comments and attachments; this would be rolled out simultaneously with updates to the mobile and tablet apps. We also added an easy way for employees to view past timesheets, upcoming shifts, see who they’d be working with, and claim open shifts.
-
-And we only had 6 months.
-
-## Getting to work
-
-## Challenges
-
-The project really challenged my ability to design on a micro and macro level simultaneously. One moment I would be organising the information architecture, fitting each of the features where it made the most sense, and the next I would be [researching](https://viget.com/inspire/testing-accordion-menu-designs-iconography) and testing how best to provide affordance for a particular button.
-
-![Macro Design][information-architecture]
-<figcaption>Macro design - card sorting helped us place each feature in its ideal place within the navigational structure.</figcaption>
-
-![Micro Design][buttons]
-<figcaption>Micro design - the iteration of accordion buttons.</figcaption>
-
-One problem we ran into again and again was the lack of time. A few really interesting ideas ended up being pushed out, but might get revisited later on. One idea that got cut was an ‘inline modal’. We needed a way to place a modal over a modal over a page, so I came up with the solution of making the first modal inline, not overlaid. Below is a messy prototype, but it demonstrates the solution pretty well.
-
-<div class="iframe-wrapper">
-	<video width="768" height="384" autoplay loop poster="/assets/images/work/deputy/inline-modal.jpg">
-		<source src="/assets/images/work/deputy/inline-modal.mp4" type="video/mp4">
-	</video>
-	<figcaption>Inline modal inspired by Material Design's use of animation.</figcaption>
-</div>
-
-Another major issue was that we were trying to bring the desktop visually in line with the mobile apps, but many design decisions simply didn’t translate from mobile to desktop. We started by questioning some of the assumptions that had been made previously, and we ended up overhauling some key aspects of the mobile apps and meeting the designs in the middle.
-
-![Transition from Deputy2 to Deputy3][transition]
-<figcaption>Unifying the desktop and mobile apps.</figcaption>
-
-## Results
-
-In the end we finished coding right on the 6 month mark, and after a few weeks of QA, we launched in June. I was expecting a substantial amount of push-back, as it was a massive redesign (and I've seen how Reddit [reacted](https://www.reddit.com/r/changelog/comments/2tw6pm/reddit_change_changes_to_default_text_styling/) when the design team increased the font size by 1px), but the response to the new version has been really positive. With this new release, and a few other key strategies, Deputy has gone from 40,000 users to 270,000 in less than a year.
-
-<blockquote>“I just wanted to say how much I love the new-look Deputy web client. You guys have obviously spent a lot of time thinking about the design of the app and it shows. Well done!” <strong class="u-pullRight">–Jason Tait, a Deputy customer</strong></blockquote>
-
-Of course, this is just the beginning. Shipping a new version or feature will always bring really valuable feedback, and constant iteration is the key. I’m looking really forward to seeing how Deputy continues to develop.
-
-[information-architecture]: /assets/images/work/deputy/information-architecture.jpg
-[buttons]: /assets/images/work/deputy/buttons.png
-[inline-modal]: /assets/images/work/deputy/inline-modal2.gif
-[transition]: /assets/images/work/deputy/transition.png -->
