--- a/_posts/work/2015-01-18-deputy-3.markdown
+++ b/_posts/work/2015-01-18-deputy-3.markdown
@@ -110,12 +110,10 @@ Another major issue was that we were trying to bring the desktop visually in lin
 <section class="Page-section" id="results">
 	<h2 class="m-bottom--lg">
 		<p>Results</p>
-		<p class="font-serif color-muted">Good, I think</p>
+		<p class="font-serif color-muted">Placeholder</p>
 	</h2>
 <div class="m-top--lg when-lg-m-top--0" markdown="1">
 In the end we finished coding right on the 6 month mark, and after a few weeks of QA, we launched in June. I was expecting a substantial amount of push-back, as it was a massive redesign (and I've seen how Reddit [reacted](https://www.reddit.com/r/changelog/comments/2tw6pm/reddit_change_changes_to_default_text_styling/) when the design team increased the font size by 1px), but the response to the new version has been really positive. With this new release, and a few other key strategies, Deputy has gone from 40,000 users to 270,000 in less than a year.
-
-<blockquote class="m-bottom--lg">“I just wanted to say how much I love the new-look Deputy web client. You guys have obviously spent a lot of time thinking about the design of the app and it shows. Well done!” <strong class="u-pullRight">–Jason Tait, a Deputy customer</strong></blockquote>
 
 Of course, this is just the beginning. Shipping a new version or feature will always bring really valuable feedback, and constant iteration is the key. I’m looking really forward to seeing how Deputy continues to develop.
 </div>
