add final hero images

--- a/_posts/work/2015-01-18-deputy-3.markdown
+++ b/_posts/work/2015-01-18-deputy-3.markdown
@@ -25,7 +25,7 @@ client:                "Deputy"
 title:                 "Deputy — Love your business again"
 description:           "In 6 months we overhauled 6 years of product design. Deputy grew its userbase 7x over the following year."
 hero_title:            "Helping SME owners love their business again"
-hero_image:            /assets/images/work/deputy/hero2.png
+hero_image:            /assets/images/work/deputy/hero.jpg
 
 subhero_title:         "Manage your team, roster in minutes."
 subhero_subtitle:      "Anywhere. Anytime."
