improve before/after interaction on mobile

--- a/_posts/work/2015-01-18-deputy-3.markdown
+++ b/_posts/work/2015-01-18-deputy-3.markdown
@@ -105,13 +105,15 @@ One problem we ran into again and again was the lack of time. A few really inter
 Another major issue was that we were trying to bring the desktop visually in line with the mobile apps, but many design decisions simply didn’t translate from mobile to desktop. We started by questioning some of the assumptions that had been made previously, and we ended up overhauling some key aspects of the mobile apps and meeting the designs in the middle.
 
 
-<div class="image-figure figure--full figure--swap m-top--lg when-lg-m-top--xl" tabindex="5">
+<div class="image-figure figure--full figure--swap m-top--lg when-lg-m-top--xl js-beforeAfterView" tabindex="5">
 	<div class="figure-content">
 		<img src="/assets/images/work/deputy/transition1.jpg" alt="Before">
 		<img src="/assets/images/work/deputy/transition2.jpg" alt="After">
 	</div>
 	<figcaption class="text-center">
-		Hover or tap to see before/after.
+		<span class="when-touch-hidden">Hover</span>
+		<span class="when-noTouch-hidden">Tap</span>
+		to see before/after.
 	</figcaption>
 </div>
 </div>
